--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'config';
+@import 'menu';
 * {
     box-sizing: border-box;
 }
@@ -48,6 +49,7 @@ main {
     padding: 4rem;
     height: 100%;
     .icons {
+        transform: rotate(1turn);
         margin-top: 1rem;
         a {
             padding: 0.4rem;
