--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,31 +1,82 @@
 //menu button
 .menu-btn {
-    position: absolute;
-    z-index: 3;
-    right: 35px;
-    top: 35px;
-    cursor: pointer;
+  position: absolute;
+  z-index: 3;
+  right: 35px;
+  top: 35px;
+  cursor: pointer;
+  @include easeOut;
+  .btn-line {
+    width: 28px;
+    height: 3px;
+    margin: 0 0 5px 0;
+    background: #fff;
     @include easeOut;
+  } //rotate into x with menu lines
+  &.close {
+    transform: rotate(180deg);
     .btn-line {
-        width: 28px;
-        height: 3px;
-        margin: 0 0 5px 0;
-        background: #fff;
-        @include easeOut;
-    } //rotate into x with menu lines
-    &.close {
-        transform: rotate(180deg);
-        .btn-line {
-            //line 1 rotate
-            &:nth-child(1) {
-                transform: rotate(45deg) translate(5px, 5px);
-            } // line 2 hide
-            &:nth-child(2) {
-                opacity: 0;
-            } // line 3 rotate
-            &:nth-child(3) {
-                transform: rotate(-45deg) translate(6px, -6px);
-            }
-        }
+      //line 1 rotate
+      &:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+      } // line 2 hide
+      &:nth-child(2) {
+        opacity: 0;
+      } // line 3 rotate
+      &:nth-child(3) {
+        transform: rotate(-45deg) translate(6px, -6px);
+      }
     }
+  }
+}
+
+// menu overlay
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+  &.show {
+    visibility: visible;
+  }
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+    &.show {
+      //slide in from top
+      transform: translate3d(0, 0, 0);
+    }
+  } //Branding side
+  &-branding {
+    background: $primary-color;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+    &.show {
+      //slide in from the bottom
+      transform: translate3d(0, 0, 0);
+    }
+    .potrait {
+      width: 300px;
+      height: 300px;
+      background: url(/dist/img/);
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
+  }
 }
