--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -74,7 +74,7 @@
     .potrait {
       width: 300px;
       height: 300px;
-      background: url(/dist/img/);
+      background: url(/dist/img/profile-pic.jpg);
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
