--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -72,11 +72,47 @@
       transform: translate3d(0, 0, 0);
     }
     .potrait {
-      width: 300px;
-      height: 300px;
+      width: 250px;
+      height: 250px;
       background: url(/dist/img/profile-pic.jpg);
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
+  }
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show {
+      //slide in from right
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    page-break-after: 1rem 0;
+    font-weight: 300;
+    color: #fff;
+    text-decoration: none;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+// delay each nav item slide by 0.1s
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
   }
 }
