--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -27,7 +27,15 @@ $backgroud-opacity: 0.7;
     }
 }
 
-//media query mixins
+//set Text color
+@function set-text-color($color) {
+    @if (lightness($color)> 40) {
+        @return #000;
+    }
+    @else {
+        @return #fff;
+    }
+} //media query mixins
 @mixin mediaSm {
     @media screen and (max-width: 500px) {
         @content;
