--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 body {
     @include background;
     background: $primary-color;
-    color: white;
+    color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -26,8 +26,7 @@ h3 {
     }
     &.sm-heading {
         margin-bottom: 2rem;
-        padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color, 2), 0.5);
+        padding: 0.2rem 1rem; //background: rgba(lighten($primary-color, 2), 0.5);
     }
 }
 
