--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -49,13 +49,13 @@ $backgroud-opacity: 0.7;
 }
 
 @mixin mediaLg {
-    @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @media screen and (min-width: 900px) {
         @content;
     }
 }
 
 @mixin mediaXl {
-    @media screen and (max-width: 1171px) {
+    @media screen and(min-width: 901px) and (max-width: 1171px) {
         @content;
     }
 }
