--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -66,15 +66,16 @@
     &-branding {
         background: darken($primary-color, 5);
         transform: translate3d(0, 100%, 0);
+        opacity: 80%;
         @include easeOut;
         &.show {
             //slide in from the bottom
             transform: translate3d(0, 0, 0);
         }
         .potrait {
-            width: 250px;
-            height: 250px;
-            background: url(/dist/img/profile-pic.jpg);
+            width: 450px;
+            height: 450px;
+            background: url(/dist/img/profile-pic-2.png);
             border-radius: 50%;
             border: solid 3px $secondary-color;
         }
@@ -102,6 +103,7 @@
         @include easeOut;
         &:hover {
             color: $secondary-color;
+            -moz-text-blink: 1;
         }
     }
 }
