--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,7 +74,10 @@ main {
     .bio-image {
         grid-area: bioimage;
         margin: auto;
+        width: 300px;
+        height: 300px;
         border-radius: 50%;
+        background-image: url(/dist/img/profile-pic-small.png);
         border: $secondary-color 3px solid;
     }
     .bio {
@@ -218,7 +221,6 @@ main {
 #main-footer {
     text-align: center;
     padding: 1rem;
-    background: darken($primary-color, 10);
     color: set-text-color($primary-color);
     height: 60px;
 }
