[ft 159516095] scss for cv timeline and jquery js for animation

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -9,9 +9,24 @@ $backgroud-opacity: 0.2;
 }
 
 @mixin border-radius ($radius) {
-    -webkit-border-radius: $radius;
+    // -webkit-border-radius: $radius;
     border-radius: $radius;
     background-clip: padding-box;
+}
+
+@mixin cv-border-radius($radius:.25em) {
+    border-radius: $radius;
+}
+
+@mixin clearfix() {
+    &:before,
+    &:after {
+        content: "";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
 }
 
 @mixin background {
