--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ main {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    background-image: url(/img/profile-pic-small.png);
+    background-image: url(/dist/img/profile-pic-small.png);
     border: #f5dd08 3px solid; }
   .about-info .bio {
     grid-area: bio;
