--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -75,7 +75,7 @@
         .potrait {
             width: 450px;
             height: 450px;
-            background: url(/dist/img/profile-pic-2.png);
+            background: url(/docs/img/profile-pic-2.png);
             border-radius: 50%;
             border: solid 3px $secondary-color;
         }
