--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -171,7 +171,7 @@
         height: 25vh;
         transform: translate3d(100%, 0, 0);
         .potrait {
-            background: url('/docs/img/profile-pic-small.jpg');
+            background: url(/docs/img/profile-pic-small.png);
             width: 150px;
             height: 150px;
         }
