--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -275,6 +275,9 @@ main {
   background: #3699fb;
   color: #333; }
 
+.cv-pdf, iframe {
+  margin: 0 auto; }
+
 .cv-container {
   width: 90%;
   max-width: 1171px;
@@ -522,7 +525,7 @@ main {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .potrait {
-      background: url("/docs/img/profile-pic-small.jpg");
+      background: url(/docs/img/profile-pic-small.png);
       width: 150px;
       height: 150px; }
   .about-info {
