--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color:#011931;
 $secondary-color: #f5dd08;
 $color: #fff;
 $show-home-image: true;
-$home-image: url('/docs/img/office-bg.jpg');
+$home-image: url(/docs/img/office-bg.jpg);
 $backgroud-opacity: 0.2;
 @mixin easeOut {
     transition: all 0.5s ease-out;
